--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,79 @@
 /* Start writing your CSS */
+
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  * {
+    margin: 0;
+  }
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  input, button, textarea, select {
+    font: inherit;
+  }
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  #root, #__next {
+    isolation: isolate;
+  }
+
+  /* nav styles */
+
+  #navstyles{
+    background-color: #EEDA92;
+    color: #9B9D57;
+  }
+
+  /* home styles */
+  
+  #homebody{
+    background-color: #9B9D57;
+    color: #EEDA92;
+  }
+
+  /* contact styles */
+
+  #contactbody{
+    background-color: #9B9D57;
+    color: #EEDA92;
+  }
+
+
+
+  /* Media Queries */
+
+  /* X-Large devices (large desktops, less than 1400px) */
+@media (max-width: 1439.98px) { 
+
+}
+
+/* Large devices (desktops, less than 1024px) */
+@media (max-width: 1023.98px) { 
+
+}
+
+/* Medium devices (tablets, less than 744px) */
+@media (max-width: 743.98px) { 
+
+}
+
+/* Small devices (landscape phones, less than 430px) */
+@media (max-width: 429.98px) {
+
+}
+
+/* X-Small devices (portrait phones, less than 375px) */
+@media (max-width: 374.98px) {
+
+}
